tests/trybuild/empty_par.stderr
error: unexpected end of macro invocation
 --> tests/trybuild/empty_par.rs:3:28
  |
3 | type EmptyPar = tpar!(Http;);
  |                            ^ missing tokens in macro arguments
  |
note: while trying to match meta-variable `$branch:ty`
 --> src/lib.rs
  |
  |     ($io:ty; $($branch:ty),+ $(,)?) => {
  |                ^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/trybuild/empty_par.rs:3:30
  |
3 | type EmptyPar = tpar!(Http;);
  |                              ^ consider adding a `main` function to `$DIR/tests/trybuild/empty_par.rs`
