tests/trybuild/empty_par.rs
use playground::*;

type EmptyPar = tpar!(Http;);
